--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=backend
 spring.data.mongodb.uri=mongodb+srv://maulizambare2:jHVB7iNMI2Ibk0Zw@cluster0.rqqsgwa.mongodb.net/donation-backend?retryWrites=true&w=majority
 spring.data.mongodb.database=donation-backend
 server.port=8080
+
+logging.level.org.springframework.security=DEBUG
+
+# Razorpay Keys
+razorpay.key.id=rzp_test_RALd8Iai4u6gPg
+razorpay.key.secret=uqZV3dqNR4qVH1iDu4Y1Kr6g
