--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=backend
 
-spring.data.mongodb.uri=mongodb+srv://maulizambare2:jHVB7iNMI2Ibk0Zw@cluster0.rqqsgwa.mongodb.net/donation-backend?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/donation-backend
 spring.data.mongodb.database=donation-backend
+
 server.port=8080
 
 logging.level.org.springframework.security=DEBUG
