Fixed the rozarpay Commit

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,11 @@ cloudinary.api-secret=ls_48tomsmCS46hSXExaP5h3mhM
 logging.level.org.springframework.security=DEBUG
 logging.level.com.crowdfund.backend.config=DEBUG
 
-# Razorpay Keys 
-razorpay.key.id=rzp_test_RALd8Iai4u6gPg 
-razorpay.key.secret=uqZV3dqNR4qVH1iDu4Y1Kr6g
+# Razorpay Keys
+razorpay.mode=${RAZORPAY_MODE:test}
+razorpay.key.id=${RAZORPAY_KEY_ID:rzp_test_SGSGChkzIpBp8i}
+razorpay.key.secret=${RAZORPAY_KEY_SECRET:Tii2A1FP4uNdUitCygC8l89K}
+logging.level.com.crowdfund.backend.service.RazorpayOrderService=DEBUG
+
+# CORS
+app.cors.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:5173}
