added chatbot Commit

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Spring WebFlux (WebClient for OpenAI calls) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
         <!-- Spring Mail (JavaMailSender) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
