--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.mail.username=${SPRING_MAIL_USERNAME:}
 spring.mail.password=${SPRING_MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Gemini Chatbot configuration
+gemini.api.key=AIzaSyB5-XqSvP936ubLoBq-GRQto69OsA_byOk
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
