--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,7 +21,7 @@ razorpay.key.secret=${RAZORPAY_KEY_SECRET:Tii2A1FP4uNdUitCygC8l89K}
 logging.level.com.crowdfund.backend.service.RazorpayOrderService=DEBUG
 
 # CORS
-app.cors.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:5173}
+app.cors.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
 
 # Mail configuration for receipt emails
 spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
@@ -32,5 +32,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Gemini Chatbot configuration
-gemini.api.key=AIzaSyB5-XqSvP936ubLoBq-GRQto69OsA_byOk
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
+gemini.api.key=${GEMINI_API_KEY:}
+gemini.api.url=${GEMINI_API_URL:https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent}
+gemini.api.fallback-url=${GEMINI_API_FALLBACK_URL:https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent}
+chatbot.system-prompt=You are a helpful assistant for a donation and crowdfunding platform. Answer clearly and keep responses focused on campaigns, donations, NGOs, and payment support.
+logging.level.com.crowdfund.backend.controller.ChatbotController=DEBUG
+logging.level.com.crowdfund.backend.service.ChatbotService=DEBUG
