OTP verification implemented Commit

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=backend
 
 spring.data.mongodb.uri=mongodb://localhost:27017/donation-backend
 spring.data.mongodb.database=donation-backend
+spring.data.mongodb.auto-index-creation=true
 
 server.port=8080
 spring.servlet.multipart.max-file-size=5MB
@@ -38,3 +39,18 @@ gemini.api.fallback-url=${GEMINI_API_FALLBACK_URL:https://generativelanguage.goo
 chatbot.system-prompt=You are a helpful assistant for a donation and crowdfunding platform. Answer clearly and keep responses focused on campaigns, donations, NGOs, and payment support.
 logging.level.com.crowdfund.backend.controller.ChatbotController=DEBUG
 logging.level.com.crowdfund.backend.service.ChatbotService=DEBUG
+
+# JWT
+app.jwt.secret=${JWT_SECRET:replace-this-with-a-long-random-secret}
+app.jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
+
+# OTP
+otp.expiry-minutes=${OTP_EXPIRY_MINUTES:5}
+otp.resend-min-seconds=${OTP_RESEND_MIN_SECONDS:30}
+otp.max-send-per-hour=${OTP_MAX_SEND_PER_HOUR:5}
+otp.max-verify-attempts=${OTP_MAX_VERIFY_ATTEMPTS:5}
+
+# Twilio SMS
+twilio.account-sid=${TWILIO_ACCOUNT_SID:}
+twilio.auth-token=${TWILIO_AUTH_TOKEN:}
+twilio.phone-number=${TWILIO_PHONE_NUMBER:}
