--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 spring.application.name=backend
 
-spring.data.mongodb.uri=mongodb://localhost:27017/donation-backend
+# MongoDB (Render / Atlas)
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/donation-backend}
 spring.data.mongodb.database=donation-backend
 spring.data.mongodb.auto-index-creation=true
 
-server.port=8080
+# Render Dynamic Port Support
+server.port=${PORT:8080}
+
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-cloudinary.url=cloudinary://718897153392226:ls_48tomsmCS46hSXExaP5h3mhM@dcnthqukd
-cloudinary.cloud-name=dcnthqukd
-cloudinary.api-key=718897153392226
-cloudinary.api-secret=ls_48tomsmCS46hSXExaP5h3mhM
+
+# Cloudinary
+cloudinary.url=${CLOUDINARY_URL:cloudinary://718897153392226:ls_48tomsmCS46hSXExaP5h3mhM@dcnthqukd}
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:dcnthqukd}
+cloudinary.api-key=${CLOUDINARY_API_KEY:718897153392226}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET:ls_48tomsmCS46hSXExaP5h3mhM}
 
 logging.level.org.springframework.security=DEBUG
 logging.level.com.crowdfund.backend.config=DEBUG
@@ -24,7 +29,7 @@ logging.level.com.crowdfund.backend.service.RazorpayOrderService=DEBUG
 # CORS
 app.cors.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
 
-# Mail configuration for receipt emails
+# Mail configuration
 spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${SPRING_MAIL_PORT:587}
 spring.mail.username=${SPRING_MAIL_USERNAME:}
@@ -32,11 +37,13 @@ spring.mail.password=${SPRING_MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Gemini Chatbot configuration
+# Gemini Chatbot
 gemini.api.key=${GEMINI_API_KEY:}
 gemini.api.url=${GEMINI_API_URL:https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent}
 gemini.api.fallback-url=${GEMINI_API_FALLBACK_URL:https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent}
+
 chatbot.system-prompt=You are a helpful assistant for a donation and crowdfunding platform. Answer clearly and keep responses focused on campaigns, donations, NGOs, and payment support.
+
 logging.level.com.crowdfund.backend.controller.ChatbotController=DEBUG
 logging.level.com.crowdfund.backend.service.ChatbotService=DEBUG
 
